# coin-radar

./: main.py  pyproject.toml  req.md  settings.yaml
.circleci/: config.yml
.github/: SECRETS_SETUP.md
.github/workflows/: ci.yml  run-monitor.yml
scripts/: run_single_scan.py
src/coin_radar/: async_utils.py  logger.py
src/coin_radar/config/: loader.py  models.py
src/coin_radar/db/: __init__.py  database.py  models.py  repository.py
src/coin_radar/fetcher/: __init__.py  data_fetcher.py  exchange_adapter.py  rate_limiter.py
src/coin_radar/filters/: signal_filter.py
src/coin_radar/monitors/: altcoin_scanner.py  major_coin_alert.py  new_contract_detector.py  perp_spot_ratio.py
src/coin_radar/notifiers/: __init__.py  dingtalk.py  formatter.py
src/coin_radar/scheduler/: main.py
