[project]
name = "coin-radar"
version = "0.1.0"
description = "加密货币山寨币异动监控系统"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ccxt>=4.0.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0",
    "aiohttp-retry>=2.8.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
coin-radar = "coin_radar.scheduler.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
